--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mime-types": "^2.1.9",
     "q": "^1.4.1",
     "request": "^2.69.0",
-    "tmp": "0.0.28"
+    "tmp": "0.0.28",
+    "xml2js": "^0.4.16"
   }
 }
